--- a/Client/ios/build.gradle
+++ b/Client/ios/build.gradle
@@ -4,7 +4,7 @@ sourceCompatibility = '1.7'
 [compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
 
 ext {
-	mainClassName = "com.GGI.GoG.IOSLauncher"
+	mainClassName = "com.GGI.GOG.IOSLauncher"
 }
 
 launchIPhoneSimulator.dependsOn build
